Fixed margin-collapsing discrepancy between other browsers and IE for h2s

--- a/css/aol-photo-gallery.css
+++ b/css/aol-photo-gallery.css
@@ -17,7 +17,8 @@
 	border: 0;
 }
 .aol-photo-gallery > h2 {
-	margin-bottom: 7px;
+	margin: 0 0 7px;
+    padding: 1em 0 0;
 	font-size: 22px;
 }
 .aol-photo-gallery > .description,
